log
Thu 11 May 2023 04:27:16 PM UTC: 
 tests:  0|4
total_score: 0/70
c4afad5
Thu 11 May 2023 04:30:49 PM UTC: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
cc6fed1
Thu 11 May 2023 04:31:01 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:38:24: error: ‘nuevoHeap’ is used uninitialized in this function [-Werror=uninitialized]
   38 |   nuevoHeap->heapArray = malloc(3 * sizeof(Heap));
      |   ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
89b2ec2
Thu 11 May 2023 04:31:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
1ff85f4
Thu 11 May 2023 04:31:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cdf753d
Thu 11 May 2023 04:32:49 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:15: error: incompatible types when initializing type ‘void *’ using type ‘heapElem’ {aka ‘struct nodo’}
   21 |   void *top = pq->heapArray[0];
      |               ^~
Compilation failed
85f7b82
Thu 11 May 2023 04:35:45 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:29: error: dereferencing ‘void *’ pointer [-Werror]
   21 |   return pq->heapArray->data[0];
      |                             ^
heap.c:21:29: error: void value not ignored as it ought to be
   21 |   return pq->heapArray->data[0];
      |          ~~~~~~~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
57aa209
Thu 11 May 2023 04:35:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   return pq->heapArray[0]->data;
      |                          ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fc85b4f
Thu 11 May 2023 04:36:22 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c795069
Thu 11 May 2023 04:38:56 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
6e6f205
Thu 11 May 2023 04:39:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:34: error: dereferencing ‘void *’ pointer [-Werror]
   21 |   void *top = pq->heapArray->data[0];
      |                                  ^
heap.c:21:15: error: void value not ignored as it ought to be
   21 |   void *top = pq->heapArray->data[0];
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
5dc08bb
Thu 11 May 2023 04:39:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:31: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   void *top = pq->heapArray[0]->data;
      |                               ^~
Compilation failed
11aa9f1
Thu 11 May 2023 04:39:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:15: error: incompatible types when initializing type ‘void *’ using type ‘heapElem’ {aka ‘struct nodo’}
   21 |   void *top = pq->heapArray[0];
      |               ^~
Compilation failed
9a1f10e
Thu 11 May 2023 04:40:29 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:23: error: invalid operands to binary == (have ‘heapElem’ {aka ‘struct nodo’} and ‘void *’)
   21 |   if(pq->heapArray[0] == NULL)
      |      ~~~~~~~~~~~~~~~~ ^~
      |                   |
      |                   heapElem {aka struct nodo}
Compilation failed
487bdad
Thu 11 May 2023 04:40:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
74e633d
Thu 11 May 2023 04:41:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
5384365
Thu 11 May 2023 04:41:43 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
6df2f09
Thu 11 May 2023 04:43:55 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:37: error: expected ‘;’ before ‘}’ token
   31 |      pq = realloc(pq, pq->capac*2+1)
      |                                     ^
      |                                     ;
   32 |   }
      |   ~                                  
Compilation failed
b4bc620
Thu 11 May 2023 04:44:04 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
c0286be
